--- a/CSS/password.css
+++ b/CSS/password.css
@@ -21,8 +21,21 @@
     color: #980409;
     border: 1px solid #980409;
     padding-left: 10px;
-    outline: none; 
+    outline: none; /* Prevent highlighting when clicked */
 }
+
+/* button {
+    width: 200px;
+    height: 32px;
+    background-color: white;
+    color: #980409;
+    border: 1px solid #980409;
+}
+
+button:hover {
+    background-color: #980409;
+    color: white;
+} */
 
 form {
     display: flex;
