--- a/CSS/shop.css
+++ b/CSS/shop.css
@@ -10,6 +10,7 @@
 }
 
 .shopItem {
+    margin-top: 70px;
     width: 350px;
     height: 450px;
     border-style: solid;
